Sécurité : variables d'environnement, CORS restreint, uploads sécurisés
- Remplacer tous les secrets hardcodés (JWT, SMTP, DB) par des variables
  d'environnement avec fallback pour le développement local
- Corriger la configuration CORS dans les deux microservices : remplacer
  le wildcard "*" par des origines explicites configurables via
  CORS_ALLOWED_ORIGINS
- Sécuriser les uploads de fichiers dans DocumentService :
  limite de taille 5 MB, protection contre le path traversal, whitelist
  d'extensions autorisées (.pdf, .jpg, .jpeg, .png, .gif, .bmp, .webp)
- Ajouter .env.example avec toutes les variables documentées
- Ajouter .gitignore pour exclure .env, uploads/ et fichiers générés

https://claude.ai/code/session_01XnWbHYNgGW97YnHeCmChx3